<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cabbaage"
    tools:context=".Crops">

    <Button
        android:id="@+id/Cropdeseases"
        android:layout_width="wrap_content"
        android:text="@string/crop_desease"
        android:textSize="30sp"

        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@+id/Cropdeseases"
        android:id="@+id/control"
        android:layout_width="wrap_content"
        android:text="@string/disease_control"
        android:textSize="30sp"

        android:layout_height="wrap_content"/>
    <Button
        android:layout_below="@+id/control"
        android:id="@+id/pest"
        android:layout_width="wrap_content"
        android:text="@string/pest_control"
        android:textSize="30sp"

        android:layout_height="wrap_content"/>
    <Button
        android:layout_below="@+id/pest"
        android:id="@+id/plant"
        android:layout_width="wrap_content"
        android:text="Plant reccomendations"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
</RelativeLayout>