<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@drawable/icon"
    tools:context=".Regstration">



    <TextView
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="20sp"
        android:text="welocome to farming consultancy"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="20sp"
        android:text="@string/register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="Email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_SignUp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Sign up"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/SignInnow"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>